# karpathy_ml_course

./: .gitignore  README.md  pyproject.toml
artifacts/: README.md
coursework/: README.md
coursework/01-micrograd/: README.md
coursework/01-micrograd/notebooks/: 01-micrograd.ipynb
coursework/02-makemore-bigram/: README.md
coursework/02-makemore-bigram/notebooks/: 02-makemore-bigram.ipynb
coursework/03-makemore-mlp/: README.md
coursework/03-makemore-mlp/notebooks/: 03-makemore-mlp.ipynb
coursework/04-activations-gradients-batchnorm/: README.md
coursework/04-activations-gradients-batchnorm/notebooks/: 04-activations-gradients-batchnorm.ipynb
coursework/05-backprop-ninja/: README.md
coursework/05-backprop-ninja/notebooks/: 05-backprop-ninja.ipynb
coursework/06-wavenet/: README.md
coursework/06-wavenet/notebooks/: 06-wavenet.ipynb
coursework/07-gpt/: README.md
coursework/07-gpt/notebooks/: 07-gpt.ipynb
coursework/08-tokenizer/: README.md
coursework/08-tokenizer/notebooks/: 08-tokenizer.ipynb
data/: README.md
lessons/: 01-micrograd-backpropagation.md  02-makemore-bigram-language-model.md  03-makemore-mlp.md  04-makemore-activations-gradients-batchnorm.md  05-makemore-backprop-ninja.md  06-makemore-wavenet.md  07-gpt-from-scratch.md  08-gpt-tokenizer.md
video_transcripts/: 01-micrograd-backpropagation.md  02-makemore-bigram-language-model.md  03-makemore-mlp.md  04-makemore-activations-gradients-batchnorm.md  05-makemore-backprop-ninja.md  06-makemore-wavenet.md  07-gpt-from-scratch.md  08-gpt-tokenizer.md  README.md
