[project]
name = "karpathy-ml-course"
version = "0.1.0"
description = "Unofficial lesson-link index and transcript collection for Andrej Karpathy's Neural Networks: Zero to Hero course."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "numpy>=2.0",
    "pandas>=2.2",
    "seaborn>=0.13",
    "torch>=2.3",
]

[dependency-groups]
dev = [
    "ruff>=0.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
